fdo#76633: writerfilter RTF import: disappear the rectangle shapes on images

If the shape properties are inside \picprop destination, don't set
shapeType.

(regression from 9f1f7199736e2ae07b34849ba66f61a1ef5782e8)

Actually this does not fix the root cause, this is just a work-around,
the extra shape is still inserted but it's invisible now.

Change-Id: I6cf093de2a5657533f393863ed8010ae083bec16
(cherry picked from commit b7857e5cfe9d5d007785ae93e5505620fc8ed475)