writerfilter/source/rtftok/rtfdocumentimpl.cxx
@@ -1414,7 +1414,8 @@ void RTFDocumentImpl::replayBuffer(RTFBuffer_t& rBuffer,
         else if (boost::get<0>(aTuple) == BUFFER_PAR)
             parBreak();
         else if (boost::get<0>(aTuple) == BUFFER_STARTSHAPE)
-            m_pSdrImport->resolve(boost::get<1>(aTuple)->getShape(), false);
+            m_pSdrImport->resolve(boost::get<1>(aTuple)->getShape(), false,
+                    RTFSdrImport::SHAPE);
         else if (boost::get<0>(aTuple) == BUFFER_ENDSHAPE)
             m_pSdrImport->close();
         else
@@ -1700,7 +1701,8 @@ int RTFDocumentImpl::dispatchDestination(RTFKeyword nKeyword)
             if (nKeyword == RTF_SHPTXT)
             {
                 if (!m_aStates.top().pCurrentBuffer)
-                    m_pSdrImport->resolve(m_aStates.top().aShape, false);
+                    m_pSdrImport->resolve(m_aStates.top().aShape, false,
+                            RTFSdrImport::SHAPE);
                 else
                 {
                     RTFValue::Pointer_t pValue(new RTFValue(m_aStates.top().aShape));
@@ -4837,7 +4839,11 @@ int RTFDocumentImpl::popState()
     case DESTINATION_SHAPEINSTRUCTION:
         // Don't trigger a shape import in case we're only leaving the \shpinst of the groupshape itself.
         if (!m_bObject && !aState.bInListpicture && !aState.bHadShapeText && !(aState.bInShapeGroup && !aState.bInShape))
-            m_pSdrImport->resolve(m_aStates.top().aShape, true);
+        {
+            m_pSdrImport->resolve(m_aStates.top().aShape, true,
+                    (aState.nDestinationState == DESTINATION_SHAPEINSTRUCTION)
+                        ? RTFSdrImport::SHAPE : RTFSdrImport::PICT);
+        }
         else if (aState.bInShapeGroup && !aState.bInShape)
         {
             // End of a groupshape, as we're in shapegroup, but not in a real shape.
